# MineSweeper

./: .gitignore  LICENSE  README.md  README_CN.md  log.md  log_AI.md
core/: Cargo.toml
core/src/: lib.rs
legacy/ver. Pygame/src/: buttons.py  config.py  game.py  game_controller.py  main.py  mine_logic.py  mine_view.py  records.py
main/: main.py
src/: assets.py  config.py
trainer/: env_DQN.py  play_minesweeper.py  test_cuda.py  trainer_DDQN_MLP.py  trainer_DQN_MLP.py
version_saved/: v1.0.py  v1.1.0.py  v1.1.1.py  v1.2.0.py  v1.2.1.py
version_saved/v1.3/v1.3.0/: config.py  main.py
version_saved/v1.3/v1.3.1/: config.py  main.py
version_saved/v1.3/v1.3.2/: config.py  main.py
version_saved/v1.3/v1.3.3Beta/: config.py  main.py
